--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-black">
+    <div id="root" class="z-10w-full max-w-lg mx-auto min-h-screen bg-white shadow-lg flex flex-col p-4 border border-black-200"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
