sending location to the backend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-black">
-    <div id="root" class="z-10w-full max-w-lg mx-auto min-h-screen bg-white shadow-lg flex flex-col p-4 border border-black-200"></div>
+    <div id="root" class="z-10w-full max-w-lg mx-auto min-h-screen bg-white shadow-lg flex flex-col  border border-black-200"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
