--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ResQnet</title>
   </head>
   <body class="bg-black">
     <div id="root" class="z-10w-full max-w-lg mx-auto min-h-screen bg-white shadow-lg flex flex-col  border border-black-200"></div>
